--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -2,21 +2,22 @@
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/core-icons/av-icons.html">
 <link rel="import" href="../bower_components/dude-gui/dude-panel.html">
-<link rel="import" href="../bower_components/dude-gui/dude-toolbar.html">
-<link rel="import" href="../bower_components/dude-gui/dude-sidebar.html">
-<link rel="import" href="../bower_components/dude-gui/dude-command.html">
 <link rel="import" href="../bower_components/dude-gui/dude-style.html">
+<link rel="import" href="../bower_components/dude-gui/dude-sidebar.html">
+<link rel="import" href="../bower_components/dude-gui/dude-toolbar.html">
+<link rel="import" href="../bower_components/dude-gui/dude-toolbar-command.html">
+<link rel="import" href="../bower_components/dude-gui/dude-toolbar-input.html">
 <link rel="import" href="cg-renderer.html">
 <polymer-element name="cg-app" attributes="logo theme graphUrl" extends="dude-style">
     <template>
-        <dude-panel id="panel" name="story-editor" sidebarPosition="left" toolbarPosition="top" styleUrl="themes/{{theme}}/panel.css" flex >
-            <dude-toolbar id="toolbar">
+        <dude-panel id="panel" name="story-editor" sidebarPosition="left" toolbarPosition="top" styleUrl="themes/{{theme}}/panel.css" flex>
+            <dude-toolbar id="toolbar"
+                          styleUrl="themes/{{theme}}/toolbar.css">
                 <div data-state="root">
-                    <dude-command name="addGroup" label="Create group" icon="av:my-library-add" on-trigger="{{runCommand}}"></dude-command>
+                    <dude-toolbar-command name="addGroup" label="Create group" icon="av:my-library-add" on-trigger="{{runCommand}}"></dude-toolbar-command>
                 </div>
                 <div data-state="addGroup">
-                    <input type="text" autofocus/>
-                    <dude-command name="root" label="Create group" icon="av:my-library-add" on-trigger="{{runCommand}}"></dude-command>
+                    <dude-toolbar-input name="createGroup" value="" icon="av:my-library-add" on-trigger="{{runCommand}}"></dude-toolbar-input>
                 </div>
             </dude-toolbar>
             <dude-sidebar hidden>
