--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body vertical layout fullbleed unresolved>
 <cg-app logo="images/dude_logo_dark.png"
-        graphUrl="examples/graph.json"
-        theme="dude"
+        graphUrl="examples/audigame.json"
+        theme="audigame"
         layout horizontal flex>
 </cg-app>
 </body>
