--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -11,9 +11,15 @@
 <link rel="import" href="cg-renderer.html">
 <polymer-element name="cg-app" attributes="logo theme graphUrl" extends="dude-style">
     <template>
+        <style>
+            dude-toolbar [data-state="root"] {
+                max-width:600px;
+                margin: auto;
+            }
+        </style>
         <dude-panel id="panel" name="story-editor" sidebarPosition="left" toolbarPosition="top" styleUrl="themes/{{theme}}/panel.css" flex>
             <dude-toolbar id="toolbar">
-                <div data-state="root">
+                <div data-state="root" layout horizontal justified>
                     <dude-toolbar-command label="add a group" icon="av:my-library-add" name="addGroup" on-trigger="{{runCommand}}"></dude-toolbar-command>
                     <dude-toolbar-command label="add a block" icon="add-box" name="addBlock" on-trigger="{{runCommand}}"></dude-toolbar-command>
                     <dude-toolbar-command label="remove the selected groups and blocks" icon="delete" name="removeSelectedNodes" on-trigger="{{runCommand}}"></dude-toolbar-command>
