--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body vertical layout fullbleed unresolved>
 <cg-app logo="images/dude_logo_dark.png"
         graphUrl="examples/audigame.json"
-        theme="dude"
+        theme="audigame"
         layout horizontal flex>
 </cg-app>
 </body>
