Handle add action.

--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -51,13 +51,13 @@
                                     data-state="group"
                                     label="Group title"
                                     icon="check"
-                                    on-trigger="{{runCommand}}">
+                                    on-submit="{{runCommand}}">
                 </dude-toolbar-input>
                 <dude-toolbar-input name="createBlock"
                                     data-state="block"
                                     label="Search block"
                                     icon="check"
-                                    on-trigger="{{runCommand}}">
+                                    on-submit="{{runCommand}}">
                 </dude-toolbar-input>
             </dude-toolbar>
             <dude-sidebar hidden>
