Add sidebar on close.

--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -78,7 +78,8 @@
                                     data-state="action"
                                     label="Search block"
                                     icon="check"
-                                    on-submit="{{runCommand}}">
+                                    on-submit="{{runCommand}}"
+                                    on-close="{{hideSidebar}}">
                 </dude-toolbar-input>
                 <div data-state="picker">Add a picker</div>
             </dude-toolbar>
