--- a/elements/cg-renderer.html
+++ b/elements/cg-renderer.html
@@ -7,7 +7,25 @@
 <link rel="import" href="../bower_components/dude-gui/dude-config.html">
 <polymer-element name="cg-renderer" attributes="graphUrl" extends="dude-config">
     <template>
-        <link rel="stylesheet" href="cg-renderer.css">
+        <style>
+            #svg #selection {
+                fill: rgba(255, 255, 255, 0.2);
+                stroke: rgba(255, 255, 255, 0.5);
+                stroke-width: 1px;
+            }
+            #svg .group, #svg .block {
+                cursor: move;
+            }
+            #svg .action .title {
+                text-anchor: middle;
+            }
+            #svg .input, #svg .output {
+                cursor: pointer;
+            }
+            .connection {
+                stroke-linecap: round;
+            }
+        </style>
         <core-ajax id="graphData"
                    url="{{graphUrl}}"
                    handleAs="json"
@@ -57,5 +75,96 @@
     <script src="../lib/serialization/json-saver.js"></script>
     <script src="../lib/serialization/json-loader.js"></script>
     <!-- CodeGraph misc -->
-    <script src="cg-renderer.js"></script>
+    <script>
+        Polymer({
+            publish: {
+
+                /**
+                 * This is the url of the graph data to load.
+                 * @attribute url
+                 * @type {String}
+                 */
+                graphUrl: null
+
+            },
+            data: null,
+            config: null,
+
+            handleErrors: function () {
+                this.loader.on("error", function (error) { this.fire("error", {error: error}); }.bind(this));
+                this.saver.on("error", function (error) { this.fire("error", {error: error}); }.bind(this));
+                this.graph.on("error", function (error) { this.fire("error", {error: error}); }.bind(this));
+                this.renderer.on("error", function (error) { this.fire("error", {error: error}); }.bind(this));
+            },
+
+            createGroup: function (name) {
+                var _id = graph.getNextGroupId();
+                renderer.createSmartGroup(_id, name);
+            },
+
+            createBlock: function (name, position) {
+                var _id = this.graph.getNextBlockId();
+                var model = this.graph.getModel(name);
+                if (model !== undefined) {
+                    this.graph.addEntity(new cg.Block(_id, model, position), this.graph);
+                } else {
+                    this.fire("error", {error: new pandora.Exception("Model {0} not found", name)});
+                }
+            },
+
+            removeSelection: function () {
+                this.renderer.removeSelection();
+            },
+
+            zoomToFit: function () {
+                this.renderer.zoomToFit();
+            },
+
+            findModels: function (options) {
+                return this.graph.findModels(options);
+            },
+
+
+            /**
+             * Create the graph when its config and data are loaded.
+             * @private
+             */
+            _createGraph: function () {
+                this.graph = new cg.Graph();
+                this.loader = new cg.JSONLoader();
+                this.saver = new cg.JSONSaver();
+                this.renderer = new cg.Renderer(this.graph, this.$.svg, this.config);
+                window.graph = this.graph;
+                window.renderer = this.renderer;
+                window.loader = this.loader;
+                window.saver = this.saver;
+                this.handleErrors();
+                this.renderer.on("picker.edit", function (picker) {
+                    this.fire("picker.edit", {picker: picker});
+                }.bind(this));
+                this.loader.load(this.graph, this._graphData);
+                this.renderer.render();
+                this.fire("ready");
+            },
+
+            /**
+             * Load the graph data from an external JSON file.
+             * @private
+             */
+            _loadGraph: function () {
+                this._graphData = this.$.graphData.response;
+                if (this.config !== null) {
+                    this._createGraph();
+                }
+            },
+
+            ready: function () {
+                this.addEventListener("dude-config-ready", function () {
+                    if (this._graphData !== undefined) {
+                        this._createGraph();
+                    }
+                });
+            }
+        });
+    </script>
 </polymer-element>
